// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a paginated table 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -65,11 +65,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 21
+           tanner 31
          </td>
          <td
            class=""
          >
            linsley
@@ -99,11 +99,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 22
+           tanner 32
          </td>
          <td
            class=""
          >
            linsley
@@ -133,11 +133,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 23
+           tanner 33
          </td>
          <td
            class=""
          >
            linsley
@@ -167,11 +167,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 24
+           tanner 34
          </td>
          <td
            class=""
          >
            linsley
@@ -201,11 +201,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 25
+           tanner 35
          </td>
          <td
            class=""
          >
            linsley
@@ -235,11 +235,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 26
+           tanner 36
          </td>
          <td
            class=""
          >
            linsley
@@ -269,11 +269,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 27
+           tanner 37
          </td>
          <td
            class=""
          >
            linsley
@@ -303,11 +303,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 28
+           tanner 38
          </td>
          <td
            class=""
          >
            linsley
@@ -337,11 +337,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 29
+           tanner 39
          </td>
          <td
            class=""
          >
            linsley
@@ -371,11 +371,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 30
+           tanner 40
          </td>
          <td
            class=""
          >
            linsley
@@ -423,20 +423,20 @@
      </button>
       
      <span>
        Page 
        <strong>
-         3 of 10
+         4 of 10
        </strong>
         
      </span>
      <span>
        | Go to page: 
        <input
          style="width: 100px;"
          type="number"
-         value="3"
+         value="4"
        />
      </span>
       
      <select>
        <option
`;

exports[`renders a paginated table 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -65,11 +65,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 31
+           tanner 41
          </td>
          <td
            class=""
          >
            linsley
@@ -99,11 +99,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 32
+           tanner 42
          </td>
          <td
            class=""
          >
            linsley
@@ -133,11 +133,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 33
+           tanner 43
          </td>
          <td
            class=""
          >
            linsley
@@ -167,11 +167,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 34
+           tanner 44
          </td>
          <td
            class=""
          >
            linsley
@@ -201,11 +201,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 35
+           tanner 45
          </td>
          <td
            class=""
          >
            linsley
@@ -235,11 +235,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 36
+           tanner 46
          </td>
          <td
            class=""
          >
            linsley
@@ -269,11 +269,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 37
+           tanner 47
          </td>
          <td
            class=""
          >
            linsley
@@ -303,11 +303,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 38
+           tanner 48
          </td>
          <td
            class=""
          >
            linsley
@@ -337,11 +337,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 39
+           tanner 49
          </td>
          <td
            class=""
          >
            linsley
@@ -371,11 +371,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 40
+           tanner 50
          </td>
          <td
            class=""
          >
            linsley
@@ -423,20 +423,20 @@
      </button>
       
      <span>
        Page 
        <strong>
-         4 of 10
+         5 of 10
        </strong>
         
      </span>
      <span>
        | Go to page: 
        <input
          style="width: 100px;"
          type="number"
-         value="4"
+         value="5"
        />
      </span>
       
      <select>
        <option
`;

exports[`renders a paginated table 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -65,11 +65,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 41
+           tanner 91
          </td>
          <td
            class=""
          >
            linsley
@@ -99,11 +99,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 42
+           tanner 92
          </td>
          <td
            class=""
          >
            linsley
@@ -133,11 +133,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 43
+           tanner 93
          </td>
          <td
            class=""
          >
            linsley
@@ -167,11 +167,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 44
+           tanner 94
          </td>
          <td
            class=""
          >
            linsley
@@ -201,11 +201,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 45
+           tanner 95
          </td>
          <td
            class=""
          >
            linsley
@@ -235,11 +235,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 46
+           tanner 96
          </td>
          <td
            class=""
          >
            linsley
@@ -269,11 +269,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 47
+           tanner 97
          </td>
          <td
            class=""
          >
            linsley
@@ -303,11 +303,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 48
+           tanner 98
          </td>
          <td
            class=""
          >
            linsley
@@ -337,11 +337,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 49
+           tanner 99
          </td>
          <td
            class=""
          >
            linsley
@@ -371,11 +371,11 @@
          class=""
        >
          <td
            class=""
          >
-           tanner 50
+           tanner 100
          </td>
          <td
            class=""
          >
            linsley
@@ -412,31 +412,35 @@
       
      <button>
        &lt;
      </button>
       
-     <button>
+     <button
+       disabled=""
+     >
        &gt;
      </button>
       
-     <button>
+     <button
+       disabled=""
+     >
        &gt;&gt;
      </button>
       
      <span>
        Page 
        <strong>
-         5 of 10
+         10 of 10
        </strong>
         
      </span>
      <span>
        | Go to page: 
        <input
          style="width: 100px;"
          type="number"
-         value="5"
+         value="10"
        />
      </span>
       
      <select>
        <option
`;
